# pytest-result-sender-lj

./: .flake8  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
tests/: test_ini.py
