[project]
name = "pytest-result-sender-lj"
version = "0.1.7"
description = "Default template for PDM package"
authors = [
    {name = "jinlyu", email = "lvjin@5i5j.com"},
]
dependencies = ["pytest>=8.3.4", "requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# 插件入口点
[project.entry-points.pytest11]
result_log = "pytest_result_sender_lj.plugin"
# 插件源码目录
[tool.pdm.build]
package-dir = "src"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]
# 配置脚手架
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
    | \.hg
    | \.tox
    | .venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 ."
]}

test = "pytest"
